--- a/valence-site/src/app/(with-footer)/couples-retreat/page.module.css
+++ b/valence-site/src/app/(with-footer)/couples-retreat/page.module.css
@@ -65,10 +65,12 @@
 }
 
 .accentImage {
+  display: block;
   border-radius: var(--radius-image);
   width: 100%;
   height: auto;
   max-width: 600px;
+  margin: 0 auto;
 }
 
 .cta {
